Dark mode fixes & adding nav links to sidebar

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -90,5 +90,9 @@ body {
         }
       }
     }
+
+    .q-list {
+      background-color: #222;
+    }
   }
 }
